[tool.poetry]
name = "airdox-"
version = "0.1.0"
description = ""
authors = ["Erwan DAYOT <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airdox_"}]

[tool.poetry.dependencies]
python = "^3.10"
python-semantic-release = "^7.32.2"
smithed-libraries = "^0.7.3"
cryptography = "^41.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
